--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@nivo/colors": "^0.61.0",
+    "@nivo/core": "^0.61.0",
     "@testing-library/react": "^9.3.2",
+    "apollo": "^2.24.0",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.0",
+    "d3-force": "^2.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "graphql": "^14.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "^3.4.0",
