--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "timetrackerclient",
   "version": "0.1.0",
+  "homepage": "https://everett-lee.github.io/TimeTrackerClient",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "apollo-client": "^2.6.4",
+    "gh-pages": "^2.2.0",
     "install-peers": "^1.0.3"
   }
 }
