--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "devDependencies": {
     "apollo-client": "^2.6.4",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "gh-pages": "^2.2.0",
     "install-peers": "^1.0.3"
   }
